--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -4,3 +4,11 @@
     bottom: 'auto',
     marginRight: '-50%',
     transform: 'translate(-50%, -50%)', */
+
+    .modal {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(0, 0, 0, 0.7);
+      }
+      
