--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,14 +1,12 @@
-/* top: '50%',
-    left: '50%',
-    right: 'auto',
-    bottom: 'auto',
-    marginRight: '-50%',
-    transform: 'translate(-50%, -50%)', */
-
     .modal {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: rgb(0, 0, 0, 0.7);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
-      
+      .boxModal{
+        position: fixed;
+        inset: 0px;
+        background-color: #3d4a57;
+      }
+     
